force-app/main/default/objects/Case/fields/AmReg_Case_Number__c.field-meta.xml
<CustomField>
    <fullName>AmReg_Case_Number__c</fullName>
    <label>AmReg Case Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>