force-app/main/default/objects/Case/fields/DialSource__Last_Disposition_DS__c.field-meta.xml
<CustomField>
    <fullName>DialSource__Last_Disposition_DS__c</fullName>
    <description>Name of the last Disposition clicked</description>
    <label>Last Disposition</label>
    <length>140</length>
    <type>Text</type>
</CustomField>