force-app/main/default/objects/Case/fields/DialSource__Total_Call_Count_DS__c.field-meta.xml
<CustomField>
    <fullName>DialSource__Total_Call_Count_DS__c</fullName>
    <description>Total number of calls made on this record</description>
    <label>Total Call Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>