force-app/main/default/objects/Case/fields/forcebrain__Last_Email__c.field-meta.xml
<CustomField>
    <fullName>forcebrain__Last_Email__c</fullName>
    <description>This field will be used to store the email up to 32000 characters.</description>
    <label>Last Email</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>