force-app/main/default/objects/Case/fields/forcebrain__Self_Scheduling_Site_Setting__c.field-meta.xml
<CustomField>
    <fullName>forcebrain__Self_Scheduling_Site_Setting__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Self-Scheduling Site Setting</label>
    <referenceTo>forcebrain__Self_Scheduling_Site_Settings__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>