force-app/main/default/objects/Case/fields/Non_Pertinent_Subject_Line__c.field-meta.xml
<CustomField>
    <fullName>Non_Pertinent_Subject_Line__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Subject line wasn&apos;t helpful, for analytics</description>
    <inlineHelpText>Subject line was not helpful</inlineHelpText>
    <label>Non-Pertinent Subject Line</label>
    <type>Checkbox</type>
</CustomField>