force-app/main/default/objects/Case/fields/Original_Subject_Line__c.field-meta.xml
<CustomField>
    <fullName>Original_Subject_Line__c</fullName>
    <inlineHelpText>If the subject line is not pertinent, log here</inlineHelpText>
    <label>Original Subject Line</label>
    <type>TextArea</type>
</CustomField>