force-app/main/default/objects/Case/fields/Walk_Up_Case__c.field-meta.xml
<CustomField>
    <fullName>Walk_Up_Case__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Case is a walk up</inlineHelpText>
    <label>Walk Up Case</label>
    <type>Checkbox</type>
</CustomField>