force-app/main/default/objects/Case/recordTypes/Helpdesk.recordType-meta.xml
<RecordType>
    <fullName>Helpdesk</fullName>
    <active>true</active>
    <businessProcess>Helpdesk</businessProcess>
    <label>Helpdesk</label>
</RecordType>