force-app/main/default/objects/Case/listViews/Helpdesk_Board.listView-meta.xml
<ListView>
    <fullName>Helpdesk_Board</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>notEqual</operation>
        <value>Closed,Vendor Ticket</value>
    </filters>
    <filters>
        <field>CASES.TYPE</field>
        <operation>notEqual</operation>
        <value>Ongoing Issue/Project,Complex Analytics Request,New User Setup</value>
    </filters>
    <label>Helpdesk Board</label>
</ListView>