force-app/main/default/objects/Case/listViews/New_Users_Board.listView-meta.xml
<ListView>
    <fullName>New_Users_Board</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.TYPE</field>
        <operation>equals</operation>
        <value>New User Setup</value>
    </filters>
    <label>New Users Board</label>
</ListView>