force-app/main/default/objects/Case/listViews/Vendor_Tickets.listView-meta.xml
<ListView>
    <fullName>Vendor_Tickets</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>Vendor Ticket</value>
    </filters>
    <label>Vendor Tickets</label>
</ListView>